Add project CRUD and fix router tabs.

--- a/src/assets/theme/styles/blocks/components/router-tabs.less
+++ b/src/assets/theme/styles/blocks/components/router-tabs.less
@@ -18,10 +18,8 @@
 
     &._selected {
       background-color: @grey-f9;
-    }
 
-    &-icon {
-      &._selected {
+      .router-tabs__tab-icon {
         fill: @blue-2e;
       }
     }
