--- a/src/assets/theme/styles/common/normalize.less
+++ b/src/assets/theme/styles/common/normalize.less
@@ -5,3 +5,13 @@ html {
 body {
   height: 100%;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.visuallyhidden {
+  visibility: hidden;
+  height: 0;
+  overflow: hidden;
+}
