--- a/src/app/modules/main/components/projects/projects.component.html
+++ b/src/app/modules/main/components/projects/projects.component.html
@@ -1,1 +1,9 @@
-<p>projects works!</p>
+<div class="projects__header">
+    <div class="projects__header-text mat-h2">My Projects</div>
+    <button class="projects__add-button" mat-raised-button color="accent" (click)="_addProject()">Add Project</button>
+</div>
+<div class="projects__wrapper">
+    <ng-container *ngFor="let project of (_projects$ | async)">
+        <tsm-project-card class="projects__card" [project]="project"></tsm-project-card>
+    </ng-container>
+</div>
