--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -1,1 +1,1 @@
-<tsm-router-tabs [items]="_tabItems" [value]="_tabItems[0]"></tsm-router-tabs>
+<tsm-router-tabs [items]="_tabItems"></tsm-router-tabs>
