--- a/src/assets/theme/styles/blocks/components/router-tabs.less
+++ b/src/assets/theme/styles/blocks/components/router-tabs.less
@@ -40,6 +40,12 @@
     background-color: @grey-e5;
     flex-grow: 1;
     padding: 32px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    overflow-y: scroll;
   }
 
 }
