--- a/src/app/modules/main/components/projects/components/project-edit/project-edit.component.html
+++ b/src/app/modules/main/components/projects/components/project-edit/project-edit.component.html
@@ -25,5 +25,5 @@
 </div>
 <div mat-dialog-actions class="project-edit__controls">
     <button mat-raised-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button color="primary" [mat-dialog-close]="true" (click)="_submit()">Apply</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="true" (click)="_submit()">Save</button>
 </div>
