--- a/src/assets/theme/styles/common/normalize.less
+++ b/src/assets/theme/styles/common/normalize.less
@@ -19,3 +19,11 @@ body {
 .mat-raised-button.mat-accent {
   background-color: #C86F57;
 }
+
+.mat-h4 {
+  margin: 0;
+}
+
+.mat-h1 {
+  margin: 0;
+}
