--- a/src/app/modules/main/components/projects/projects.component.less
+++ b/src/app/modules/main/components/projects/projects.component.less
@@ -17,6 +17,7 @@
     align-self: stretch;
     justify-content: space-between;
     display: flex;
+    margin-bottom: 15px;
   }
 
   &__add-button {
