--- a/src/app/components/table/table.component.less
+++ b/src/app/components/table/table.component.less
@@ -32,23 +32,27 @@
     }
 
     &:nth-child(2) {
-      width: 300px;
+      flex-basis: 45%;
       min-width: 300px;;
     }
 
     &:nth-child(3) {
-      width: 70px;
+      flex-basis: 15%;
       min-width: 70px;;
     }
 
     &:nth-child(4) {
-      width: 90px;
+      flex-basis: 15%;
       min-width: 90px;;
     }
 
     &:nth-child(5) {
-      width: 120px;
+      flex-basis: 25%;
       min-width: 120px;;
+    }
+
+    &._hidden {
+      visibility: hidden;
     }
   }
 }
