--- a/src/app/modules/main/components/kanban/kanban.component.less
+++ b/src/app/modules/main/components/kanban/kanban.component.less
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
   flex-grow: 1;
   align-self: stretch;
 }
@@ -47,7 +47,6 @@
     display: flex;
     align-items: stretch;
     flex-grow: 1;
-    padding-right: 20px;
     align-self: stretch;
   }
 
@@ -55,5 +54,11 @@
     &+& {
       margin-left: 20px;
     }
+  }
+
+  &__error {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
