--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -1,1 +1,2 @@
-<tsm-router-tabs [items]="_tabItems"></tsm-router-tabs>
+<tsm-router-tabs [itemsTop]="_tabItems"
+                 [itemsBottom]="_tabBottomItems"></tsm-router-tabs>
