--- a/src/app/modules/main/modules/tasks/tasks.component.html
+++ b/src/app/modules/main/modules/tasks/tasks.component.html
@@ -23,7 +23,7 @@
     <div class="mat-h1">No Project Selected</div>
 </ng-template>
 <ng-template #noTasks>
-    <div class="mat-h1">No Tasks in Project</div>
+    <div class="mat-h3">No Tasks in Project Backlog</div>
 </ng-template>
 <ng-template #loading>
     <div class="mat-h1">Loading...</div>
